--- a/index.html
+++ b/index.html
@@ -1528,76 +1528,8 @@ function openModule(id,btn){
  btn.classList.add('active');
 }
 
-/* OCORRÊNCIAS */
-function horaAtual(){
- return new Date().toLocaleTimeString('pt-BR',{hour:'2-digit',minute:'2-digit'})+'H';
-}
-function adicionarHistorico(){
- if(!obsTexto.value.trim()) return;
- historico.value+=(historico.value?"\n":"")+"# "+horaAtual()+" "+obsTexto.value;
- obsTexto.value="";
-}
-function copiarHistorico(){
- navigator.clipboard.writeText(historico.value);
- showToast("Histórico copiado com sucesso!");
-}
-function limparHistorico(){
- historico.value="";
- obsTexto.value="";
-}
 
-/* BLOQUEIO */
-function gerarRelatorio(){
 
- const hora = new Date().toLocaleTimeString("pt-BR", {
-   hour: '2-digit',
-   minute: '2-digit'
- });
-
- const t = 
-`# ${hora} | ` +
-`RESP: ${responsavel.value || "-"} | ` +
-`EQP: ${bloq_equipe.value || "-"} | ` +
-`CONT: ${contato.value || "-"} | ` +
-`VIAT: ${viatura.value || "-"} | ` +
-`RADIO: ${radio.value || "-"} | ` +
-`TESTE RADIO: ${testeRadio.value || "-"} | ` +
-`REF.ELETRICA: ${referencia.value || "-"} | ` +
-`CONDUTOR: ${tipoCondutor.value || "-"} | ` +
-`MARESIA: ${maresia.value || "-"} | ` +
-`SELF-HEALING: ${selfhealing.value || "-"} | ` +
-`DESATIVOU SH: ${desativou.value || "-"} | ` +
-`SERVIÇO: ${servico.value || "-"} | ` +
-`OBS: ${obsRel.value || "-"}`;
-
- resultado.value = t;
- navigator.clipboard.writeText(t);
- showToast("Relatório copiado!");
-}
-
-function limparRelatorio(){
- document.querySelectorAll('#rel input,#rel textarea').forEach(e=>e.value="");
-}
-
-/* CALLBACK */
-function atualizarDataHora(){
- dataHora.value=new Date().toLocaleString("pt-BR");
-}
-atualizarDataHora();
-
-function gerarTexto(){
- atualizarDataHora();
- const atuacao = celular.checked ? telefone.value : ramal.value;
- const t=`Data/Hora: ${dataHora.value} # Operador: ${operador.value} # Atuação: ${atuacao} # CL Reincidente: ${reincidente.value} # Ligação: ${ligacao.value} # Situação: ${situacao.value} # CJ Crítico: ${cj.value} # Risco de Vida: ${risco.value} # Observações: ${observacoes.value||"Sem observações"}`;
- resultadoCallback.value=t;
- navigator.clipboard.writeText(t);
- showToast("Texto de callback copiado com sucesso!");
-}
-function limparCallback(){
- document.querySelectorAll('#callback input,#callback textarea').forEach(e=>e.value="");
- document.querySelectorAll('#callback select').forEach(e=>e.selectedIndex=0);
- atualizarDataHora();
-}
 
 function atualizarRodape(){
     const agora = new Date();
@@ -1614,446 +1546,8 @@ function atualizarRodape(){
 
 setInterval(atualizarRodape, 1000);
 atualizarRodape();
-/* ================================
-   MÓDULO EQUIPES (ISOLADO)
-================================ */
 
-let eq_dados = JSON.parse(localStorage.getItem("equipes")) || [];
-let eq_pendencias = JSON.parse(localStorage.getItem("pendencias")) || [];
-let eq_edit = null;
-let eq_editPend = null;
 
-/* ===== MAPAS ===== */
-function eq_abrirMapa(src){
-  const modal = document.getElementById("modal-mapa");
-  const img = document.getElementById("modal-img");
-
-  img.src = src;
-  modal.style.display = "flex";
-}
-
-function eq_fecharMapa(e){
-  // só fecha se clicar no fundo escuro
-  if(e.target.id === "modal-mapa"){
-    document.getElementById("modal-mapa").style.display = "none";
-  }
-}
-
-
-/* ===== EQUIPES ===== */
-function eq_salvar(){
-  if(!eq_equipe.value.trim()){
-    alert("Informe a equipe");
-    return;
-  }
-
-  const obj = {
-    equipe: eq_equipe.value.toUpperCase(),
-    integrantes: eq_integrantes.value.toUpperCase(),
-    telefone: eq_telefone.value,
-    viatura: eq_viatura.value,
-    radio: eq_radio.value,
-    tipo: eq_tipo.value,
-    regional: eq_regional.value,
-    obs: eq_obs.value,
-    alerta: eq_alerta.value
-  };
-
-  if(eq_edit !== null){
-    eq_dados[eq_edit] = obj;
-    eq_edit = null;
-  } else {
-    eq_dados.push(obj);
-  }
-
-  localStorage.setItem("equipes", JSON.stringify(eq_dados));
-  eq_limpar();
-  eq_render();
-}
-
-function eq_render(){
-  eq_tabela.innerHTML = "";
-  let total = 0;
-
-  eq_dados.forEach((d,i)=>{
-    if((!eq_busca.value || d.equipe.includes(eq_busca.value.toUpperCase())) &&
-       (!eq_filtroRegional.value || d.regional === eq_filtroRegional.value)){
-
-      total++;
-
-let icone = "";
-if(d.alerta){
-  let emoji = d.alerta.match(/^[^\s]+/)[0]; // pega o emoji
-  let cor = "vermelho";
-
-  if(
-    d.alerta.includes("Religação") ||
-    d.alerta.includes("Falta")
-  ){
-    cor = "amarelo";
-  }
-
- icone = `<span class="alerta ${cor}" title="${d.alerta}">${emoji}</span>`;
-
-}
-
-
-  eq_tabela.innerHTML += `
-<tr>
-  <td>${d.equipe}</td>
-  <td>${d.integrantes || "-"}</td>
-  <td>${d.telefone || "-"}</td>
-  <td>${d.viatura || "-"}</td>
-  <td>${d.radio}</td>
-  <td>${d.tipo}</td>
-  <td>${d.regional || "-"}</td>
-  <td>${d.obs || "-"}</td>
-  <td>${icone}</td>
-  <td>
-    <button onclick="eq_copiarEquipe(${i})" class="btn-icone btn-sec">📋</button>
-    <button onclick="eq_editar(${i})" class="btn-icone btn-editar">✏️</button>
-    <button onclick="eq_remover(${i})" class="btn-icone btn-excluir">🗑️</button>
-  </td>
-</tr>
-`;
-    }
-  });
-
-  eq_resumo.innerText = `Total de equipes exibidas: ${total}`;
-}
-
-function eq_editar(i){
-  const d = eq_dados[i];
-  eq_equipe.value = d.equipe;
-  eq_integrantes.value = d.integrantes;
-  eq_telefone.value = d.telefone;
-  eq_viatura.value = d.viatura;
-  eq_radio.value = d.radio;
-  eq_tipo.value = d.tipo;
-  eq_regional.value = d.regional;
-  eq_obs.value = d.obs;
-  eq_alerta.value = d.alerta;
-  eq_edit = i;
-}
-
-function eq_remover(i){
-  if(confirm("Remover equipe?")){
-    eq_dados.splice(i,1);
-    localStorage.setItem("equipes", JSON.stringify(eq_dados));
-    eq_render();
-  }
-}
-
-function eq_limpar(){
-  eq_equipe.value="";
-  eq_integrantes.value="";
-  eq_telefone.value="";
-  eq_viatura.value="";
-  eq_obs.value="";
-  eq_alerta.value="";
-  eq_regional.value="";
-  eq_edit = null;
-}
-
-function eq_limparLista(){
-  if(confirm("Deseja limpar toda a lista?")){
-    eq_dados = [];
-    localStorage.removeItem("equipes");
-    eq_render();
-  }
-}
-
-function eq_exportar(){
-  let csv="Equipe;Integrantes;Telefone;Viatura;Rádio;Tipo;Regional;Obs;Alerta\n";
-  eq_dados.forEach(d=>{
-    csv+=`${d.equipe};${d.integrantes};${d.telefone};${d.viatura};${d.radio};${d.tipo};${d.regional};${d.obs};${d.alerta}\n`;
-  });
-  let a=document.createElement("a");
-  a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
-  a.download="equipes.csv";
-  a.click();
-}
-
-/* ===== PENDÊNCIAS ===== */
-function eq_abrirPendencias(){
-  document.getElementById("moduloEquipes").style.display="none";
-  document.getElementById("moduloPendencias").style.display="block";
-  eq_renderPendencias();
-}
-
-function eq_voltarEquipes(){
-  document.getElementById("moduloPendencias").style.display="none";
-  document.getElementById("moduloEquipes").style.display="block";
-}
-
-function eq_salvarPendencia(){
-  if(!p_equipe.value || !p_descricao.value){
-    alert("Informe OS/Ocorrência e descrição");
-    return;
-  }
-
-  const obj={
-    equipe:p_equipe.value.toUpperCase(),
-    regional:p_regional.value,
-    tipo:p_tipo.value,
-    prioridade:p_prioridade.value,
-    status:p_status.value,
-    descricao:p_descricao.value,
-    vencimento:p_vencimento.value
-  };
-
-  if(eq_editPend!==null){
-    eq_pendencias[eq_editPend]=obj;
-    eq_editPend=null;
-  }else{
-    eq_pendencias.push(obj);
-  }
-
-  localStorage.setItem("pendencias",JSON.stringify(eq_pendencias));
-  eq_limparPendencia();
-  eq_renderPendencias();
-}
-
-function eq_renderPendencias(){
-  tabelaPendencias.innerHTML="";
-
-  const hoje = new Date();
-  hoje.setHours(0,0,0,0);
-
-  eq_pendencias.forEach((p,i)=>{
-
-    /* ===== DATA ===== */
-    let dataBR = "-";
-    let statusClasse = "";
-    let dataClasse = "";
-
-    if(p.vencimento){
-      const dataObj = new Date(p.vencimento + "T00:00:00");
-      dataBR = dataObj.toLocaleDateString("pt-BR");
-
-      if(dataObj < hoje){
-        // vencido
-        statusClasse = "status-vencido";
-        dataClasse = "status-vencido";
-      }else{
-        // ainda não venceu
-        statusClasse = "status-ok";   // amarelo
-        dataClasse = "status-ok";     // amarelo
-      }
-    }
-
-    /* ===== PRIORIDADE ===== */
-    let classePrio = "prio-normal";
-    if(p.prioridade === "ALTA") classePrio = "prio-alta";
-    if(p.prioridade === "CRÍTICA") classePrio = "prio-critica";
-
-    tabelaPendencias.innerHTML += `
-    <tr>
-      <td>${p.equipe}</td>
-      <td>${p.regional||"-"}</td>
-      <td>${p.tipo||"-"}</td>
-      <td style="text-align:left">${p.descricao}</td>
-      <td class="${classePrio}">${p.prioridade}</td>
-      <td class="${statusClasse}">${p.status}</td>
-      <td class="${dataClasse}">${dataBR}</td>
-      <td>
-        <button class="btn-icone btn-sec" onclick="eq_copiarPendencia(${i})">📋</button>
-        <button class="btn-icone btn-editar" onclick="eq_editarPendencia(${i})">✏️</button>
-        <button class="btn-icone btn-excluir" onclick="eq_removerPendencia(${i})">🗑️</button>
-      </td>
-    </tr>`;
-  });
-}
-
-
-
-function eq_editarPendencia(i){
-  const p=eq_pendencias[i];
-  p_equipe.value=p.equipe;
-  p_regional.value=p.regional;
-  p_tipo.value=p.tipo;
-  p_prioridade.value=p.prioridade;
-  p_status.value=p.status;
-  p_descricao.value=p.descricao;
-  p_vencimento.value=p.vencimento;
-  eq_editPend=i;
-}
-
-function eq_removerPendencia(i){
-  if(confirm("Remover pendência?")){
-    eq_pendencias.splice(i,1);
-    localStorage.setItem("pendencias",JSON.stringify(eq_pendencias));
-    eq_renderPendencias();
-  }
-}
-
-function eq_limparPendencia(){
-  p_equipe.value="";
-  p_descricao.value="";
-  p_regional.value="";
-  p_tipo.value="";
-  p_prioridade.value="NORMAL";
-  p_status.value="PENDENTE";
-  p_vencimento.value="";
-  eq_editPend=null;
-}
-
-function eq_limparListaPendencias(){
-  if(confirm("Limpar todas as pendências?")){
-    eq_pendencias=[];
-    localStorage.removeItem("pendencias");
-    eq_renderPendencias();
-  }
-}
-
-function eq_gerarRelatorioPendencias(){
-  if(eq_pendencias.length===0){
-    alert("Nenhuma pendência registrada");
-    return;
-  }
-
-  let texto="🚨 PENDÊNCIAS DO DIA\n\n";
-  eq_pendencias.forEach(p=>{
-    texto+=`🧾 ${p.equipe} | ${p.regional||"-"} | ${p.tipo||"-"}
-📝 ${p.descricao}
-📅 Venc: ${p.vencimento||"-"}\n\n`;
-  });
-
-  navigator.clipboard.writeText(texto);
-  alert("Relatório copiado!");
-}
-
-/* INIT */
-eq_render();
-function eq_toggleMapa(){
-  const mapas = document.getElementById("mapas-container");
-
-  if(!mapas) return;
-
-  mapas.classList.toggle("hidden");
-}
-function eq_copiarEquipe(i){
-  const d = eq_dados[i];
-
-  const texto = `📋 EQUIPE DE CAMPO
-
-👥 Equipe: ${d.equipe}
-👤 Integrantes: ${d.integrantes || "-"}
-📞 Telefone: ${d.telefone || "-"}
-🚐 Viatura: ${d.viatura || "-"}
-📡 Rádio: ${d.radio || "-"}
-🔁 Tipo: ${d.tipo || "-"}
-📍 Regional: ${d.regional || "-"}
-📝 Obs: ${d.obs || "-"}`;
-
-  navigator.clipboard.writeText(texto);
-  showToast("Dados da equipe copiados 📋");
-}
-
-function eq_copiarPendencia(i){
-  const p = eq_pendencias[i];
-
-  if(!p){
-    console.error("Pendência não encontrada:", i);
-    return;
-  }
-
-  const texto = 
-`🚨 PENDÊNCIA OPERACIONAL
-
-🧾 OS/Ocorrência: ${p.equipe}
-📍 Regional: ${p.regional || "-"}
-📦 Tipo: ${p.tipo || "-"}
-⚠ Prioridade: ${p.prioridade}
-📌 Status: ${p.status}
-📅 Vencimento: ${p.vencimento ? new Date(p.vencimento+"T00:00:00").toLocaleDateString("pt-BR") : "-"}
-📝 Descrição:
-${p.descricao}`;
-
-  navigator.clipboard.writeText(texto)
-    .then(() => {
-      showToast("Pendência copiada 📋");
-    })
-    .catch(err => {
-      console.error("Erro ao copiar pendência:", err);
-      alert("Erro ao copiar pendência");
-    });
-}
-/* =========================
-   PREENCIMENTO DE SS
-========================= */
-
-function gerarSSWhats(){
-  const ref = ss_ref.value && ss_num.value ? `${ss_ref.value} ${ss_num.value}` : "-";
-  const id = ss_id.value ? `ID: ${ss_id.value}` : "-";
-
-  const texto =
-`🧾 SS
-
-REGIONAL: ${ss_regional.value || "-"}
-ABRANGÊNCIA: ${ss_abrangencia.value || "-"}
-EQUIPE: ${ss_equipe.value || "-"}
-ACESSO: ${ss_acesso.value || "-"}
-REF.ELÉTRICA: ${ref}
-
-${id}
-SERVIÇO: ${ss_servico.value || "-"}
-ENDEREÇO: ${ss_endereco.value || "-"}
-COORD: ${ss_coord.value || "-"}
-OBS: ${ss_obs.value || "-"}`;
-
-  ss_resultado.value = texto;
-  navigator.clipboard.writeText(texto);
-  showToast("Relatório WhatsApp copiado 📲");
-}
-
-function gerarSSPadrao(){
-  const ref = ss_ref.value && ss_num.value ? `${ss_ref.value} ${ss_num.value}` : "-";
-  const id = ss_id.value ? `ID:${ss_id.value}` : "-";
-
-  const texto =
-`REGIONAL:${ss_regional.value || "-"} | ABRANGÊNCIA:${ss_abrangencia.value || "-"} | EQUIPE:${ss_equipe.value || "-"} | ACESSO:${ss_acesso.value || "-"} | REF.ELÉTRICA:${ref} | ${id} | SERVIÇO:${ss_servico.value || "-"} | ENDEREÇO:${ss_endereco.value || "-"} | COORD:${ss_coord.value || "-"} | OBS:${ss_obs.value || "-"}`;
-
-  ss_resultado.value = texto;
-  navigator.clipboard.writeText(texto);
-  showToast("Relatório SS copiado 🧾");
-}
-
-function limparSS(){
-  document.querySelectorAll('#ss input, #ss textarea').forEach(e=>e.value="");
-  document.querySelectorAll('#ss select').forEach(e=>e.selectedIndex=0);
-  ss_resultado.value="";
-}
-function gerarSinergia(){
-  const rd = sg_rd.value ? `RD ${sg_rd.value}` : "RD -";
-
-  const texto =
-`${rd}
-TP/BT: ${sg_tpbt.value || "-"}
-Ramal/Conexões: ${sg_ramal.value || "-"}
-DPS: ${sg_dps.value || "-"}
-Tensão CA disjuntor: ${sg_tensao_ca.value || "-"}
-Disjuntor armado: ${sg_disj.value || "-"}
-Alarme bateria antes da perda: ${sg_alarme.value || "-"}
-Tensão bateria: ${sg_bateria.value ? sg_bateria.value + "V" : "-"}
-Painel religador: ${sg_painel.value || "-"}
-Modem/Rádio: ${sg_modem.value || "-"}
-Antena: ${sg_antena.value || "-"}
-Sinais de curto: ${sg_curto.value || "-"}
-Tanque: ${sg_tanque.value || "-"}
-Cubículo: ${sg_cubiculo.value || "-"}
-Cordão umbilical: ${sg_cordao.value || "-"}`;
-
-  sg_resultado.value = texto;
-  navigator.clipboard.writeText(texto);
-  showToast("Script Mais Sinergia copiado ⚙️");
-}
-
-function limparSinergia(){
-  document.querySelectorAll('#sinergia input, #sinergia textarea').forEach(e=>e.value="");
-  document.querySelectorAll('#sinergia select').forEach(e=>e.selectedIndex=0);
-  sg_resultado.value="";
-}
 
 </script>
 <div class="footer-global">
@@ -2075,6 +1569,14 @@ function limparSinergia(){
 <div class="footer-right" id="footer-hora">DEUS seja Louvado</div>
 
 </div>
+<script src="js/core.js"></script>
+<script src="js/ocorrencias.js"></script>
+<script src="js/bloqueios.js"></script>
+<script src="js/callback.js"></script>
+<script src="js/equipes.js"></script>
+<script src="js/pendencias.js"></script>
+<script src="js/ss.js"></script>
+<script src="js/sinergia.js"></script>
 
 </body>
 </html>
