--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,7 @@ atualizarRodape();
 </div>
 <script src="js/core.js"></script>
 <script src="js/ocorrencias.js"></script>
-<script src="js/bloqueios.js"></script>
+<script src="js/bloqueios.js?v=2"></script>
 <script src="js/callback.js"></script>
 <script src="js/equipes.js"></script>
 <script src="js/pendencias.js"></script>
@@ -1710,3 +1710,4 @@ atualizarRodape();
 
 </body>
 </html>
+
