--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@ input:focus, select:focus, textarea:focus{
     <button onclick="openModule('equipes',this)">👷 Gestão de Equipes</button>
     <button onclick="openModule('ss',this)">🧾 Preenchimento de SS</button>
     <button onclick="openModule('sinergia',this)">⚙️ Script Mais Sinergia</button>
-    <button onclick="openModule('desarme',this)">🚨 Script Desarme</button>
+    <button onclick="openModule('desarme',this)">🚨 Script Informações Desarme</button>
 
 
 </div>
@@ -1710,4 +1710,5 @@ atualizarRodape();
 
 </body>
 </html>
+
 
