--- a/index.html
+++ b/index.html
@@ -1736,7 +1736,7 @@ input:focus, select:focus, textarea:focus{
       </div>
 
       <div>
-        <label>Tipo de Cabo</label>
+        <label>Bitola rede MT?</label>
         <select id="tf_tipo_cabo">
           <option value="">Selecione</option>
           <option>4 AWG S/ALMA</option>
@@ -1938,3 +1938,4 @@ atualizarRodape();
 
 </body>
 </html>
+
